Fri Sep 15 02:40:52 BST 2006  Olly Betts <olly@survex.com>

	* backends/flint/flint_btreebase.cc: Avoid copying beyond the end of
	  the bitmap block.

Thu Sep 14 02:01:58 BST 2006  Olly Betts <olly@survex.com>

	* backends/flint/flint_version.cc: Fix warning from GCC 4.1.0.

Wed Sep 13 18:12:43 BST 2006  Olly Betts <olly@survex.com>

	* backends/flint/flint_io.cc,backends/flint/flint_io.h,
	  backends/flint/flint_version.cc: Fix compiler warnings.

Wed Sep 13 06:09:40 BST 2006  Olly Betts <olly@survex.com>

	* backends/flint/flint_version.cc,backends/flint/flint_version.h:
	  Actually commit the new files!

Wed Sep 13 05:21:04 BST 2006  Olly Betts <olly@survex.com>

	* backends/flint/,common/utils.h: Rewrite some of flint's low level IO
	  functions, and the "iamflint" handling class.

Tue Sep 12 20:22:57 BST 2006  Olly Betts <olly@survex.com>

	* backends/remote/remote-database.cc: Fix to compile.

Tue Sep 12 18:56:16 BST 2006  Olly Betts <olly@survex.com>

	* backends/remote/remote-database.cc,common/remote-database.h:
	  Fix bug in remote backend which incorrectly returned an empty MSet
	  under certain circumstances!

Tue Sep 12 11:51:31 BST 2006  Olly Betts <olly@survex.com>

	* matcher/msetcmp.cc: "static inline" -> "inline" since the static is
	  superfluous and Sun's C++ warns.

Mon Sep 11 23:42:28 BST 2006  Olly Betts <olly@survex.com>

	* configure.ac: Check $CXX not $CC to identify which C++ compiler we
	  have.

Mon Sep 11 16:32:37 BST 2006  Olly Betts <olly@survex.com>

	* api/omenquire.cc,api/vectortermlist.h,
	  backends/flint/flint_positionlist.cc,configure.ac,
	  net/remoteconnection.cc,net/tcpclient.cc,
	  queryparser/queryparser.lemony,tests/api_anydb.cc,tests/api_db.cc,
	  tests/api_nodb.cc: I've discovered that -library=stlport4 puts
	  Sun's compiler into an "ANSI C++ compliant" mode, so do that
	  automatically in configure and throw away all the annoying special
	  bits of alternative code we'd accumulated just for this one
	  compiler.
